--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "fs": "0.0.1-security",
+    "openai": "^5.20.3",
     "path": "^0.12.7"
   }
 }
