--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "fs": "0.0.1-security",
     "openai": "^5.20.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^5.8.2"
   }
 }
