--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "vsce": "^2.15.0"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "vscode": "^1.1.37"
   }
 }
