--- a/frontend/.vscode/tasks.json
+++ b/frontend/.vscode/tasks.json
@@ -2,6 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "npm: watch",
       "type": "npm",
       "script": "watch",
       "group": "build",
@@ -10,23 +11,19 @@
         "reveal": "never"
       },
       "isBackground": true,
-      "problemMatcher": [
-        {
-          "pattern": [
-            {
-              "regexp": "\\b(?:error)\\b",
-              "file": 1,
-              "location": 2,
-              "message": 3
-            }
-          ],
-          "background": {
-            "activeOnStart": true,
-            "beginsPattern": "^\\s*\\d{1,2}:\\d{2}:\\d{2}(?: AM| PM)? - File change detected\\. Starting incremental compilation\\.\\.\\.$",
-            "endsPattern": "^\\s*\\d{1,2}:\\d{2}:\\d{2}(?: AM| PM)? - (?:Compilation complete\\.|Found \\d+ errors?\\.) Watching for file changes\\.$"
-          }
+      "problemMatcher": {
+        "pattern": {
+          "regexp": ".",
+          "file": 1,
+          "location": 2,
+          "message": 3
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "^.*Starting compilation in watch mode.*$",
+          "endsPattern": "^.*Found \\d+ errors?\\. Watching for file changes\\.$|^.*Compilation complete\\. Watching for file changes\\.$"
         }
-      ]
+      }
     },
     {
       "type": "npm",
