Functionality for selecting multiple file has been implemented

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,10 @@
         "title": "Secure Scan: Scan Entire Project"
       },
       {
+        "command": "secureScan.scanSelectedFiles",
+        "title": "Secure Scan: Scan Selected Files"
+      },
+      {
         "command": "secureScan.toggleAutoScanOnSave",
         "title": "Secure Scan: Toggle Auto Scan on Save"
       }
