--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "examples": "node examples/orchestration_examples.js",
+    "test:flow": "node test-orchestration-flow.js",
+    "test:security": "node test-vulnerability-analysis.js"
   },
   "keywords": [],
   "author": "",
